Added a basic ui

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,11 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TimeTable2Calendar</title>
-    <div id="root" style="height: 100%; width: 100%;"></div>
-
+    <title>Picasso - AI Style transfer</title>
 </head>
 <body>
-    
+    <div id="bg-image"> </div>
+    <div id="root" style="height: 100%; width: 100%; z-index: 2;">
+        Hello World
+    </div>
 </body>
 </html>
